--- a/src/assets/css/mystyle.css
+++ b/src/assets/css/mystyle.css
@@ -487,7 +487,7 @@ footer {
 }
 
 .navHead {
-	width: 80%;
+	width: 90%;
 	background-color: #2F4056;
 	display: flex;
 	align-items: center;
@@ -1397,13 +1397,13 @@ footer {
 
 @media screen and (max-width: 1920px) {
 	.main {
-		max-width: 1400px;
+		min-width: 1400px;
 	}
 	.main {
-		width: 80%;
+		width: 90%;
 	}
 	.navHead {
-		max-width: 1400px;
+		min-width: 1400px;
 	}
 	.navs {
 		display: block;
